# binance-challenge-be

./: .env.example  .gitignore  AI.md  README.md  REQUIREMENTS.md  docker-compose.yml  pyproject.toml
db/init/: 001_schema.sql
evidence/: analysis.ipynb  logs.txt
sdk/go/binance_sdk/: README.md  client.go  go.mod  stream.go  types.go
sdk/go/examples/basic/: go.mod  main.go
sdk/python/binance_sdk/: __init__.py  client.py
services/go-backend/: Dockerfile  go.mod  main.go  start.sh
services/ingestor/: Dockerfile  INGESTOR.MD  backfill.go  config.go  go.mod  go.sum  main.go  orderbook.go  rest_limit.go  snapshot.go  start.sh  sync.go  types.go  websocket.go  writer.go
services/react-frontend/: Dockerfile  index.html  package.json  start.sh
services/react-frontend/src/: App.tsx  styles.css  types.ts  useSSESnapshots.ts
