[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binance-sdk"
version = "0.1.0"
description = "Python SDK for loading normalized Binance market snapshots"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "sqlalchemy>=2.0",
  "psycopg2-binary>=2.9"
]

[tool.setuptools]
include-package-data = true
package-dir = {"" = "sdk/python"}

[tool.setuptools.packages.find]
where = ["sdk/python"]
include = ["binance_sdk*"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
]
